# youtube-search-cli

./: .gitignore  README.md  pyproject.toml
data/: mock_videos.json
tests/: test_mock_client.py  test_service.py
youtube_search/: cli.py  client.py  models.py  service.py
